--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: fiap
-  name: restaurante-acme-video-svc
+  name: hackathon-video-image-api-svc
 spec:
   type: LoadBalancer
   selector:
-    app: restaurante-acme-video
+    app: hackathon-video-image-api
   ports:
     - port: 80
       protocol: TCP
       targetPort: 4080
-      name: restaurante-acme-video-load-balancer
+      name: hackathon-video-image-api-load-balancer
